# near-delegators-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml  stake_delegators.json
.fly/scripts/: 1_storage_init.sh
.github/workflows/: echo-hi.yml
src/: delegators.rs  extensions.rs  git.rs  main.rs  methods.rs  stake_delegators.rs
