[package]
name = "validators-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-ext = "1.0"
color-eyre = "0.6"

serde = "1.0"
serde_json = "1.0"

near-primitives = "0.17"
near-jsonrpc-primitives = "0.17"
near-jsonrpc-client = "0.6"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

rocket = { version = "0.5", features = ["json"] }
