[package]
name = "validators-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-ext = "1.0"
color-eyre = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

near-crypto = "0.17"
near-primitives = "0.17"
near-jsonrpc-primitives = "0.17"
near-jsonrpc-client = "0.6"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

git2 = "0.18"
auth-git2 = "0.5.3"
openssl = { version = "0.10.40", features = ["vendored"] }

rocket = { version = "0.5", features = ["json"] }
