[package]
name = "near-delegators-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-ext = "1.0"
color-eyre = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

borsh = { version = "1.2", features = ["derive"] }
near-crypto = "0.19"
near-primitives = "0.17"
near-jsonrpc-primitives = "0.17"
near-jsonrpc-client = "0.6"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

openssl = { version = "0.10.62", features = ["vendored"] }

rocket = { version = "0.5", features = ["json"] }

log = "0.4"
chrono = "0.4"
pretty_env_logger = "0.5"

shuttle-runtime = { version = "0.42.0", default-features = false }
shuttle-rocket = "0.42.0"
shuttle-persist = "0.42.0"
